Update 'gm1s2pq3t-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:b8e8b9c6e996f370da3a15678ac2a71a912e822e@sha256:f8cddc0a2a28176814f68764a72c313f29935a37a6eacdf8b0d975dad7ef0a71

--- a/components/gm1s2pq3t-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/gm1s2pq3t-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: gm1s2pq3t-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:b8e8b9c6e996f370da3a15678ac2a71a912e822e@sha256:f8cddc0a2a28176814f68764a72c313f29935a37a6eacdf8b0d975dad7ef0a71
+          name: container-image
